# dsptool

./: .bumpversion.cfg  pyproject.toml
