[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsptool"
description = "A set of tools for DSP projects"
version = "0.4.5"
authors = [
    { name = "Alexander Rodionov", email = "tandav@tandav.me" },
]
urls = {homepage = "https://github.com/tandav/dsptool"}

requires-python = ">=3.8"
readme = 'README.md'
dynamic = ["dependencies"]


[project.optional-dependencies]
dev = [
    "bump2version==1.0.1",
    "pre-commit==2.19.0",
]
test = [
    "pytest==7.1.2",
]
[options.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = {file = 'requirements.txt'}
